--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-transformers==4.5.1
-allennlp==2.4.0
-datasets==1.9.0
-keras==2.6.0
-tensorflow==2.6.0
 spacy==2.2.4
 bert-score==0.3.10
 language_tool_python==2.6.1
+mindspore==2.0.0.rc1
+cudnn==8.2.1.32
+cudatoolkit==11.1.1
+python==3.8.6
